flux/trusted/vaultwarden/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
  labels:
    network-zone: trusted
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
